2020-11-06  Yusuke Suzuki  <ysuzuki@apple.com>

        Re-enable SharedArrayBuffer for JSC shell and Testers
        https://bugs.webkit.org/show_bug.cgi?id=212069

        Reviewed by Keith Miller.

        * Scripts/test262/Runner.pm:
        (getFeatureFlags):
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        (main):

2020-11-06  Truitt Savell  <tsavell@apple.com>

        Unreviewed, reverting r269486.

        Caused 50+ timeouts on Mac Debug WK2

        Reverted changeset:

        "[Cocoa] Inspector Extensions: Add _WKInspectorExtension and
        related plumbing"
        https://bugs.webkit.org/show_bug.cgi?id=217783
        https://trac.webkit.org/changeset/269486

2020-11-06  Jer Noble  <jer.noble@apple.com>

        Do not allow pages to enter fullscreen while an exit fullscreen operation is ongoing.
        https://bugs.webkit.org/show_bug.cgi?id=218640
        <rdar://problem/70697738>

        Reviewed by Eric Carlson.

        * WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::enterFullScreenForElement):
        (WTR::InjectedBundlePage::exitFullScreenForElement):
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::setEnterFullscreenForElementCallback):
        (WTR::TestRunner::callEnterFullscreenForElementCallback):
        (WTR::TestRunner::setExitFullscreenForElementCallback):
        (WTR::TestRunner::callExitFullscreenForElementCallback):
        * WebKitTestRunner/InjectedBundle/TestRunner.h:

2020-11-06  Adrian Perez de Castro  <aperez@igalia.com>

        [Flatpak SDK] Update libmanette source URI to new location
        https://bugs.webkit.org/show_bug.cgi?id=218509

        Reviewed by Carlos Alberto Lopez Perez.

        * buildstream/elements/sdk/libmanette.bst: Update URI.

2020-11-06  Carlos Alberto Lopez Perez  <clopez@igalia.com>
