@@ -1,3 +1,12 @@
+2020-11-06  Aakash Jain  <aakash_jain@apple.com>
+
+        [build.webkit.org] Use workerEnvironment instead of slaveEnvironment for new Buildbot
+        https://bugs.webkit.org/show_bug.cgi?id=218656
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/build-webkit-org/steps.py:
+
 2020-11-06  Yusuke Suzuki  <ysuzuki@apple.com>
 
         Re-enable SharedArrayBuffer for JSC shell and Testers
